--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "cloudinary": "^2.7.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.539.0",
     "postcss": "^8.5.6",
     "qrcode.react": "^4.2.0",
